# feinstaub-api

./: .gitignore  README.md  docker-compose.yml  noxfile.py  pyproject.toml  requirements.txt
.github/workflows/: continuous-integration.yml
devops/docker/app/: app.Dockerfile  docker-entrypoint.sh
devops/docker/nginx/: vhost.conf
devops/docker/web/: docker-entrypoint.sh  web.Dockerfile
feinstaub/: manage.py
feinstaub/feinstaub/: asgi.py  settings.py  urls.py  wsgi.py
feinstaub/main/: admin.py  models.py  serializers.py  views.py
feinstaub/main/migrations/: 0001_initial.py
feinstaub/sensors/: admin.py  authentication.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
feinstaub/sensors/management/commands/: cleanup.py  export_as_csv.py
feinstaub/sensors/migrations/: 0001_initial.py  0002_auto_20201025_0118.py  0020_auto_20201024_1331.py
feinstaub/tests/: conftest.py  test_authenticator.py  test_full_push.py  test_nested_write_sensordata_push.py
